Created CRUD with scaffoldupto part 5

--- a/Mvc/appsettings.json
+++ b/Mvc/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcContext": "Server=(localdb)\\mssqllocaldb;Database=MvcContext-f4354037-ef66-4b34-bac1-bc0807d10353;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
